<resources>
    <string name="make_as_start_point">Make as Start Point</string>
    <string name="shared_string_current">Current</string>
    <string name="last_intermediate_dest_description">Adds the last stop along the route</string>
    <string name="first_intermediate_dest_description">Adds the first stop on the route</string>
    <string name="subsequent_dest_description">Move destination up, and create destination</string>
    <string name="show_closed_notes">Show closed notes</string>
    <string name="switch_osm_notes_visibility_desc">Show/Hide OSM Notes on the map.</string>
    <string name="gpx_file_desc">GPX - suitable for export to JOSM or other OSM editors.</string>
    <string name="osc_file_desc">OSC - suitable for export to OpenStreetMap.</string>
    <string name="gpx_file">GPX file</string>
    <string name="osc_file">OSC file</string>
    <string name="choose_file_type">Choose file type</string>
    <string name="osm_edits_export_desc">Select the export type: OSM notes, POI, or both.</string>
    <string name="all_data">All data</string>
    <string name="osm_notes">OSM Notes</string>
    <string name="will_open_tomorrow_at">Will open tomorrow at</string>
    <string name="rendering_attr_hidePOILabels_name">POI labels</string>
    <string name="shared_string_without_name">Without name</string>
    <string name="what_is_here">What\'s here:</string>
    <string name="parked_at">parked at</string>
    <string name="pick_up_till">Pick up until</string>
    <string name="without_time_limit">Without time limit</string>
    <string name="context_menu_read_full_article">Read full article</string>
    <string name="context_menu_read_article">Read article</string>
    <string name="context_menu_points_of_group">All points of the group</string>
    <string name="open_from">Open from</string>
    <string name="open_till">Open till</string>
    <string name="will_close_at">Will close at</string>
    <string name="will_open_at">Will open at</string>
    <string name="will_open_on">Will open at</string>
    <string name="additional_actions">Additional actions</string>
    <string name="av_locations_selected_desc">GPX file with coordinates and data of the selected notes.</string>
    <string name="av_locations_all_desc">GPX file with coordinates and data of all notes.</string>
    <string name="release_3_0">
	\u2022 \n\n
	</string>
    <string name="modify_the_search_query">Modify the search query.</string>
    <string name="shared_string_actions">Actions</string>
    <string name="shared_string_marker">Marker</string>
    <string name="empty_state_osm_edits">Create or modify OSM objects</string>
    <string name="empty_state_osm_edits_descr">Create or modify OSM POI, open or comment OSM Notes, and contribute recorded GPX files.</string>
    <string name="shared_string_deleted">Deleted</string>
    <string name="shared_string_edited">Edited</string>
    <string name="shared_string_added">Added</string>
    <string name="marker_activated">Marker %s activated.</string>
    <string name="one_tap_active_descr">Tap a marker on the map to move it to the top of the active markers without opening the context menu.</string>
    <string name="one_tap_active">One tap active</string>
    <string name="by_date">By date</string>
    <string name="by_type">By type</string>
    <string name="looking_for_tracks_with_waypoints">Looking for tracks with waypoints</string>
    <string name="shared_string_more_without_dots">More</string>
    <string name="appearance_on_the_map">Appearance on the map</string>
    <string name="add_track_to_markers_descr">Select a track to add its waypoints to the markers. (Only tracks with waypoints are listed.)</string>
    <string name="add_favourites_group_to_markers_descr">Select a favorite category to add to the markers.</string>
    <string name="track_waypoints">Track waypoints</string>
    <string name="favourites_group">Favorites category</string>
    <string name="add_group">Add a group</string>
    <string name="add_group_descr">You can import groups from favorites or track waypoints.</string>
    <string name="empty_state_markers_active">Create map markers!</string>
    <string name="empty_state_markers_active_desc">Long or short tap places, then tap the marker flag button.</string>
    <string name="empty_state_markers_groups">Import groups</string>
    <string name="empty_state_markers_groups_desc">You can import favorite groups or track waypoints as markers.</string>
    <string name="empty_state_markers_history">@string/shared_string_history</string>
    <string name="empty_state_markers_history_desc">Markers marked as passed will appear on this screen.</string>
    <string name="shared_string_two">Two</string>
    <string name="shared_string_one">One</string>
    <string name="show_guide_line_descr">Display guide lines from your position to the active marker locations.</string>
    <string name="show_arrows_descr">Display one or two arrows indicating the direction to the active markers.</string>
    <string name="distance_indication_descr">Choose how to display the distance to active markers.</string>
    <string name="active_markers_descr">Choose how many direction indicators are displayed.</string>
    <string name="digits_quantity">Number of decimal digits</string>
    <string name="shared_string_right">Right</string>
    <string name="shared_string_left">Left</string>
    <string name="show_number_pad">Show number pad</string>
    <string name="shared_string_paste">Paste</string>
    <string name="coordinate_input_accuracy_description">Automatically switch to the next field after entering %1$d decimal digits.</string>
    <string name="coordinate_input_accuracy">%1$d digits</string>
    <string name="go_to_next_field">Go to next field</string>
    <string name="rename_marker">Rename marker</string>
    <string name="tap_on_map_to_hide_interface_descr">A tap on the map toggles the control buttons and widgets.</string>
    <string name="tap_on_map_to_hide_interface">Full screen mode</string>
    <string name="mark_passed">Mark passed</string>
    <string name="import_gpx_file_description">can be imported as Favorites points, or as track file.</string>
    <string name="import_as_gpx">Import as GPX file</string>
    <string name="import_as_favorites">Import as Favorites</string>
    <string name="import_file">Import file</string>
	<string name="wrong_input">Wrong input</string>
	<string name="enter_new_name">Enter new name</string>
	<string name="shared_string_back">Back</string>
	<string name="view">View</string>
	<string name="waypoints_added_to_map_markers">Waypoints added to map markers</string>
	<string name="wrong_format">Wrong format</string>
    <string name="shared_string_road">Road</string>
    <string name="show_map">Show map</string>
    <string name="route_is_calculated">Route is calculated</string>
    <string name="round_trip">Round trip</string>
    <string name="plan_route_no_markers_toast">You must add at least one marker to use this function.</string>
    <string name="osn_modify_dialog_error">Exception occurred: note was not modified</string>
    <string name="osn_modify_dialog_title">Modify note</string>
    <string name="context_menu_item_modify_note">Modify OSM note</string>
    <string name="make_round_trip_descr">Add copy of start point as destination.</string>
    <string name="make_round_trip">Make round trip</string>
    <string name="shared_string_markers">Markers</string>
    <string name="coordinates_format">Coordinates format</string>
    <string name="use_system_keyboard">Use system keyboard</string>
    <string name="fast_coordinates_input_descr">Choose coordinate input format. You can always change it by tapping Options.</string>
    <string name="fast_coordinates_input">Fast coordinates input</string>
    <string name="routing_attr_avoid_ice_roads_fords_name">Avoid ice roads, fords</string>
    <string name="routing_attr_avoid_ice_roads_fords_description">Avoid ice roads and fords.</string>
    <string name="use_location">Use position</string>
    <string name="add_location_as_first_point_descr">Add your position as first point to plan perfect route.</string>
    <string name="my_location">My position</string>
    <string name="shared_string_finish">Finish</string>
    <string name="plan_route">Plan route</string>
    <string name="shared_string_sort">Sort</string>
    <string name="coordinate_input">Coordinate input</string>
    <string name="is_saved">is saved</string>
    <string name="marker_save_as_track_descr">Export your markers to a file you can specify here:</string>
    <string name="marker_save_as_track">Save as track</string>
    <string name="move_to_history">Move to history</string>
    <string name="group_will_be_removed_after_restart">Group will be removed after the next app restart.</string>
    <string name="show_guide_line">Show guide lines</string>
    <string name="show_arrows_on_the_map">Show arrows on the map</string>
    <string name="show_passed">Show passed</string>
    <string name="hide_passed">Hide passed</string>
    <string name="remove_from_map_markers">Remove from Map Markers</string>
    <string name="descendingly">descending</string>
    <string name="ascendingly">ascending</string>
    <string name="date_added">Date added</string>
    <string name="order_by">Order by:</string>
    <string name="marker_show_distance_descr">Select how to indicate distance and direction to map markers on the map screen:</string>
    <string name="map_orientation_change_in_accordance_with_speed">Map orientation threshold</string>
    <string name="map_orientation_change_in_accordance_with_speed_descr">Select below which speed the map orientation switches from \'To direction of movement\' to \'To compass\'.</string>
    <string name="all_markers_moved_to_history">All map markers moved to history</string>
    <string name="marker_moved_to_history">Map marker moved to history</string>
    <string name="marker_moved_to_active">Map marker moved to active</string>
    <string name="shared_string_list">List</string>
    <string name="shared_string_groups">Groups</string>
    <string name="passed">Last used: %1$s</string>
    <string name="make_active">Make active</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_seven_days">Last 7 days</string>
    <string name="this_year">This year</string>
    <string name="move_all_to_history">Move all to history</string>
    <string name="show_direction">Distance indication</string>
    <string name="sort_by">Sort by</string>
    <string name="do_not_use_animations">Do not use animations</string>
    <string name="do_not_use_animations_descr">Disables animations in the app.</string>
    <string name="keep_showing_on_map">Keep showing on map</string>
    <string name="exit_without_saving">Exit without saving?</string>
    <string name="line">Line</string>
    <string name="save_as_route_point">Save as route points</string>
    <string name="save_as_line">Save as line</string>
    <string name="route_point">Route point</string>
    <string name="edit_line">Edit line</string>
    <string name="add_point_before">Add point before</string>
    <string name="add_point_after">Add point after</string>
    <string name="analyze_on_map">Analyze on map</string>
    <string name="altitude_descent">Descent</string>
    <string name="altitude_ascent">Ascent</string>
    <string name="altitude_range">Altitude range</string>
    <string name="average_altitude">Average altitude</string>
    <string name="shared_string_time">Time</string>
    <string name="total_distance">Total distance</string>
    <string name="shared_string_go">Go</string>
    <string name="shared_string_save_as_gpx">Save as new GPX track</string>
    <string name="print_route">Print route</string>
    <string name="share_route_as_gpx">Share route as GPX file</string>
    <string name="show_route">Route details</string>
</resources>