<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/bg_color"
        android:paddingTop="8dp">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="?attr/bg_color"
        android:paddingBottom="4dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingStart="16dp">

            <ImageView
                android:id="@+id/average_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_altitude_average"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp">

                <TextView
                    android:id="@+id/average_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    tools:text="40 m"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/default_desc_text_size"/>

                <TextView
                    android:id="@+id/average_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/average_altitude"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="@dimen/default_sub_text_size"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingStart="16dp">

            <ImageView
                android:id="@+id/range_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_altitude_average"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp">

                <TextView
                    android:id="@+id/range_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    tools:text="30m - 53m"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/default_desc_text_size"/>

                <TextView
                    android:id="@+id/range_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/altitude_range"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="@dimen/default_sub_text_size"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="?attr/bg_color"
        android:paddingTop="4dp"
        android:paddingBottom="8dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/dashboard_divider"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/dashboard_divider"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="?attr/bg_color"
        android:paddingTop="4dp"
        android:paddingBottom="8dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingStart="16dp">

            <ImageView
                android:id="@+id/ascent_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_altitude_ascent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp">

            <TextView
                    android:id="@+id/ascent_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    tools:text="174"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/default_desc_text_size"/>

                <TextView
                    android:id="@+id/ascent_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/altitude_ascent"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="@dimen/default_sub_text_size"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingStart="16dp">

            <ImageView
                android:id="@+id/descent_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_altitude_descent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp">

                <TextView
                    android:id="@+id/descent_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    tools:text="164"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/default_desc_text_size"/>

                <TextView
                    android:id="@+id/descent_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/altitude_descent"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="@dimen/default_sub_text_size"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/dashboard_divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/bg_color"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/details_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/details_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:textColor="?attr/color_dialog_buttons"
                android:textSize="@dimen/default_sub_text_size"
                android:text="@string/analyze_on_map"/>

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/list_item_divider"/>

</LinearLayout>
